--- a/razer pages/Properties/launchSettings.json
+++ b/razer pages/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:23922",
-      "sslPort": 44335
+      "applicationUrl": "http://localhost:44076",
+      "sslPort": 44366
     }
   },
   "profiles": {
-    "CurrencyConvertor": {
+    "razer_pages": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7106;http://localhost:5106",
+      "applicationUrl": "https://localhost:7200;http://localhost:5200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
